# mac-tdavec

./: .gitignore  install.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish_ubuntu.yml  python-package-conda.yml
sample_notebooks/: ripser.ipynb
tutorials/basic/: Basic 1 - HNX Basics.ipynb
